added working scrollview on test Third screen

--- a/multiscreen.kv
+++ b/multiscreen.kv
@@ -1,17 +1,66 @@
 WindowManager:
     MainScreen:
     SecondScreen:
+    DictionarySettings:
+    Third:
 
 <MainScreen>:
     name:"main"
 
 
+
+
 <SecondScreen>:
     name:"second"
-    GridLayout:
-        cols:2
-        Button:
-            text:"You are on second screen \n Click me to go back"
-            on_release:app.root.current = "main"
+    ScrollView:
+        do_scroll_x: False
+        do_scroll_y: True
 
 
+        GridLayout:
+            cols:2
+            padding:10
+            col_default_height: 300
+
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
+            Button:
+                text:"You are on second screen \n Click me to go back"
+                on_release:app.root.current = "main"
