--- a/multiscreen.kv
+++ b/multiscreen.kv
@@ -1,6 +1,6 @@
 WindowManager:
     MainScreen:
-    SecondScreen:
+    Games:
     DictionarySettings:
     Neko:
 
@@ -10,8 +10,8 @@ WindowManager:
 
 
 
-<SecondScreen>:
-    name:"second"
+<Games>:
+    name:"games"
     ScrollView:
         do_scroll_x: False
         do_scroll_y: True
