Memory game in dev

--- a/multiscreen.kv
+++ b/multiscreen.kv
@@ -2,7 +2,8 @@ WindowManager:
     MainScreen:
     Games:
     DictionarySettings:
-    Neko:
+    NihAppSettings:
+    MemoryGame:
 
 <MainScreen>:
     name:"main"
@@ -10,57 +11,3 @@ WindowManager:
 
 
 
-<Games>:
-    name:"games"
-    ScrollView:
-        do_scroll_x: False
-        do_scroll_y: True
-
-
-        GridLayout:
-            cols:2
-            padding:10
-            col_default_height: 300
-
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
-            Button:
-                text:"You are on second screen \n Click me to go back"
-                on_release:app.root.current = "main"
